Major refactor of code, Fixed some issues: duplicated entitiies on reload, entities not having a value on restart

--- a/custom_components/polygonal_zones/manifest.json
+++ b/custom_components/polygonal_zones/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "polygonal_zones",
   "name": "Polygonal Zones",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "codeowners": [
     "@MichelGerding"
   ],
@@ -11,7 +11,7 @@
   "homekit": {},
   "iot_class": "calculated",
   "requirements": [
-    "shapely==2.0.5",
+    "shapely",
     "pandas",
     "aiohttp"
   ],
